--- a/frontend/src/components/TeamBuild/TeamBuild.css
+++ b/frontend/src/components/TeamBuild/TeamBuild.css
@@ -160,12 +160,12 @@
 
 /* Spielerpositionen – etwas höher gesetzt */
 .TW { bottom: 40px; left: 50%; transform: translateX(-50%); }
-.LAV { bottom: 120px; left: 20px; }
+.LV { bottom: 120px; left: 20px; }
 .IV1 { bottom: 120px; left: 100px; }
 .IV2 { bottom: 120px; right: 100px; }
-.RAV { bottom: 120px; right: 20px; }
+.RV { bottom: 120px; right: 20px; }
 
-.DZM { bottom: 200px; left: 50%; transform: translateX(-50%); }
+.ZDM { bottom: 200px; left: 50%; transform: translateX(-50%); }
 .ZM1 { bottom: 250px; left: 100px; }
 .ZM2 { bottom: 250px; right: 100px; }
 
@@ -176,7 +176,7 @@
 /* Spieler-Liste */
 .player-list {
     flex: 1;
-    min-width: 400px;
+    min-width: 800px;
     max-height: 540px;
     overflow-y: auto;
     background-color: white;
@@ -193,3 +193,16 @@
 .assigned-row {
     background-color: #d1ecff !important;
 }
+.remove-player {
+    color: red;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+
+}
+
+.remove-player:hover {
+    opacity: 0.7;
+}
+
+
